# aurora-rust-helloworld

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: master.yml
.rpm/: aurora-rust-helloworld.desktop  aurora-rust-helloworld.spec
lib/: ld-linux-armhf.so.3  libc.so.6
src/: main.rs
